--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,12 +7,11 @@ jobs:
   build:
     strategy:
       matrix:
-        os:
-          - ubuntu-18.04
-          - macos-10.15
         include:
           - TARGET: linux
+            os: ubuntu-18.04
           - TARGET: macos
+            os: macos-10.15
     runs-on: ${{ matrix.os }}
     
     steps:
