--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,9 @@
 name: CI
 
 on:
-  workflow_dispatch:
+  push:
+    tags:
+      - '*'
 
 jobs:
   build:
@@ -45,17 +47,18 @@ jobs:
     needs: [build]
   
     steps:
-      - id: get-sha
-        run: |
-          echo ::set-output name=sha::$( curl -u "u:${{github.token}}" https://api.github.com/repos/webmproject/libvpx/git/ref/heads/master | jq .object.sha | tr -d '"' )
+      - name: Get tag name
+        id: get_tag
+        run: echo ::set-output name=TAG::$(echo $GITHUB_REF | cut -d / -f 3)
+
       - name: Create release
         uses: actions/create-release@v1
         id: create_release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.get-sha.outputs.sha }}
-          release_name: libvpx ${{ steps.get-sha.outputs.sha }}
+          tag_name: ${{ steps.get_tag.outputs.TAG }}
+          release_name: Release ${{ steps.get_tag.outputs.TAG }}
         
       - name: Download Linux build
         uses: actions/download-artifact@v1
