--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,6 +78,7 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: macos/libvpx.a
           asset_name: libvpx.a
+          asset_content_type: application/x-binary
           
       - name: Upload Linux package
         uses: actions/upload-release-asset@v1
