--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: macos/libvpx.a
-          asset_name: libvpx.a
+          asset_name: libvpx-macos.a
           asset_content_type: application/x-binary
           
       - name: Upload Linux package
@@ -87,5 +87,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: linux/libvpx.a
-          asset_name: libvpx.a
+          asset_name: libvpx-linux.a
           asset_content_type: application/x-binary
