--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,12 +14,25 @@ jobs:
             os: ubuntu-18.04
           - TARGET: macos
             os: macos-10.15
+          - TARGET: windows
+            os: windows-latest
     runs-on: ${{ matrix.os }}
+    
+    defaults:
+      run:
+        shell: ${{ matrix.os == 'Windows' && 'msys2 {0}' || 'bash' }}
     
     steps:
       - uses: actions/checkout@v2
         with:
           repository: webmproject/libvpx
+          
+      - uses: msys2/setup-msys2@v2
+        if: matrix.TARGET == 'windows'
+        with:
+          install: >-
+            base-devel
+            git
       
       - name: Install dependencies (macOS)
         if: matrix.TARGET == 'macos'
@@ -29,17 +42,35 @@ jobs:
         if: matrix.TARGET == 'linux'
         run: sudo apt install yasm
         
+      - name: Install dependencies (Windows)
+        if: matrix.TARGET == 'windows'
+        run: python.exe -c "from urllib.request import urlretrieve; urlretrieve('http://www.tortall.net/projects/yasm/releases/yasm-1.3.0-win64.exe', '$env:GITHUB_WORKSPACE\\yasm.exe')"
+      - name: (Windows) Add Yasm to PATH
+        if: matrix.TARGET == 'windows'
+        run: echo "::add-path::$env:GITHUB_WORKSPACE"
+        
       - name: Configure build
         run: ./configure --disable-examples --disable-tools --disable-docs --enable-vp9-decoder --disable-vp8-decoder --disable-vp8-encoder --disable-vp9-encoder --disable-unit-tests
 
       - name: Build
         run: make -j2
         
-      - name: Upload temporary artifact
+      - name: Upload temporary artifact (Unix)
+        if: matrix.TARGET != 'windows'
         uses: actions/upload-artifact@v2
         with:
           name: ${{ matrix.TARGET }}
           path: libvpx.a
+          
+      - name: Debug
+        run: ls
+          
+      - name: Upload temporary artifact (Windows)
+        if: matrix.TARGET == 'windows'
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ matrix.TARGET }}
+          path: vpx.lib
           
   release:
     runs-on: ubuntu-18.04
@@ -70,6 +101,11 @@ jobs:
         with:
           name: macos
           
+      - name: Download Windows build
+        uses: actions/download-artifact@v1
+        with:
+          name: windows
+          
       - name: Upload macOS package
         uses: actions/upload-release-asset@v1
         env:
@@ -88,4 +124,14 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: linux/libvpx.a
           asset_name: libvpx-linux.a
+          asset_content_type: application/x-binary
+          
+      - name: Upload Windows package
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: windows/vpx.lib
+          asset_name: libvpx-windows.lib
           asset_content_type: application/x-binary
