--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Add Yasm to PATH (Windows)
         if: matrix.os == 'windows-latest'
         shell: powershell
-        run: echo "$env:GITHUB_WORKSPACE" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+        run: echo $GITHUB_WORKSPACE >> $GITHUB_PATH
         
       - name: Create build dir
         run: mkdir build-output
