--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Add Yasm to PATH (Windows)
         if: matrix.os == 'windows-latest'
         shell: powershell
-        run: echo $GITHUB_WORKSPACE >> $GITHUB_PATH
+        run: echo "$env:GITHUB_WORKSPACE" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
         
       - name: Create build dir
         run: mkdir build-output
@@ -58,7 +58,7 @@ jobs:
         run: cd build-output && ../configure --disable-examples --disable-tools --disable-docs --enable-vp9-decoder --disable-vp8-decoder --disable-vp8-encoder --disable-vp9-encoder --disable-unit-tests
 
       - name: Build
-        run: cd build-output && make -j2
+        run: cd build-output && PATH=$PATH:$GITHUB_WORKSPACE make -j2
         
       - name: Upload temporary artifact (Unix)
         if: matrix.TARGET != 'windows'
