--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
         
       - name: Install dependencies (Windows)
         if: matrix.os == 'windows-latest'
-        run: python.exe -c "import os; from urllib.request import urlretrieve; urlretrieve('http://www.tortall.net/projects/yasm/releases/yasm-1.3.0-win64.exe', os.path.join(os.environ['GITHUB_WORKSPACE'], 'yasm.exe'))"
+        run: python.exe -c "import os; from urllib.request import urlretrieve; urlretrieve('http://www.tortall.net/projects/yasm/releases/yasm-1.3.0-win64.exe', os.path.join(os.environ['GITHUB_WORKSPACE'], 'yasm'))"
       - name: Add Yasm to PATH (Windows)
         if: matrix.os == 'windows-latest'
         shell: powershell
@@ -58,7 +58,7 @@ jobs:
         run: cd build-output && ../configure --disable-examples --disable-tools --disable-docs --enable-vp9-decoder --disable-vp8-decoder --disable-vp8-encoder --disable-vp9-encoder --disable-unit-tests
 
       - name: Check yasm availability
-        run: yasm --version
+        run: ls && yasm --version
 
       - name: Build
         run: cd build-output && PATH=$PATH:$GITHUB_WORKSPACE make -j2
