--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,10 +45,10 @@ jobs:
         
       - name: Install dependencies (Windows)
         if: matrix.os == 'windows-latest'
-        run: python.exe -c "import os; from urllib.request import urlretrieve; urlretrieve('http://www.tortall.net/projects/yasm/releases/yasm-1.3.0-win64.exe', os.path.join(os.environ['GITHUB_WORKSPACE'], 'yasm.exe'))"
+        run: mkdir bin && python.exe -c "import os; from urllib.request import urlretrieve; urlretrieve('http://www.tortall.net/projects/yasm/releases/yasm-1.3.0-win64.exe', os.path.join(os.environ['GITHUB_WORKSPACE'], 'bin/yasm'))"
       - name: Add Yasm to PATH (Windows)
         if: matrix.os == 'windows-latest'
-        run: echo $GITHUB_WORKSPACE >> $GITHUB_PATH
+        run: echo $GITHUB_WORKSPACE/bin >> $GITHUB_PATH
         
       - name: Create build dir
         run: mkdir build-output
