--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,24 +43,24 @@ jobs:
         if: matrix.TARGET == 'linux'
         run: sudo apt install yasm
         
-      - name: Install dependencies (Windows)
-        if: matrix.os == 'windows-latest'
-        run: mkdir bin && python.exe -c "import os; from urllib.request import urlretrieve; urlretrieve('http://www.tortall.net/projects/yasm/releases/yasm-1.3.0-win64.exe', os.path.join(os.environ['GITHUB_WORKSPACE'], 'bin/yasm'))"
-      - name: Add Yasm to PATH (Windows)
-        if: matrix.os == 'windows-latest'
-        run: echo $GITHUB_WORKSPACE/bin >> $GITHUB_PATH
-        
       - name: Create build dir
         run: mkdir build-output
+        
+      - name: Install dependencies (Windows)
+        if: matrix.os == 'windows-latest'
+        run: python.exe -c "import os; from urllib.request import urlretrieve; urlretrieve('http://www.tortall.net/projects/yasm/releases/yasm-1.3.0-win64.exe', os.path.join(os.environ['GITHUB_WORKSPACE'], 'build-output/yasm.exe'))"
+      - name: Add Yasm to PATH (Windows)
+        if: matrix.os == 'windows-latest'
+        run: echo $GITHUB_WORKSPACE/build-output >> $GITHUB_PATH && cp yasm.exe yasm
         
       - name: Configure build
         run: cd build-output && ../configure --disable-examples --disable-tools --disable-docs --enable-vp9-decoder --disable-vp8-decoder --disable-vp8-encoder --disable-vp9-encoder --disable-unit-tests
 
       - name: Check yasm availability
-        run: ls && yasm --version
+        run: cd build-output && ls && yasm --version
 
       - name: Build
-        run: cd build-output && PATH=$PATH:$GITHUB_WORKSPACE make -j2
+        run: cd build-output && make -j2
         
       - name: Upload temporary artifact (Unix)
         if: matrix.TARGET != 'windows'
