--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,6 @@
-name: CI
+name: Build libvpx
 
-on:
-  push:
-    tags:
-      - '*'
+on: workflow_dispatch
 
 jobs:
   build:
@@ -11,11 +8,12 @@ jobs:
       matrix:
         include:
           - TARGET: linux
-            os: ubuntu-18.04
+            os: ubuntu-22.04
           - TARGET: macos
-            os: macos-10.15
+            os: macos-11
           - TARGET: windows
-            os: windows-latest
+            os: windows-2022
+    
     runs-on: ${{ matrix.os }}
     
     defaults:
@@ -49,13 +47,10 @@ jobs:
         
       - name: Install dependencies (Windows)
         if: matrix.os == 'windows-latest'
-        run: python.exe -c "import os; from urllib.request import urlretrieve; urlretrieve('http://www.tortall.net/projects/yasm/releases/yasm-1.3.0-win64.exe', os.path.join(os.environ['GITHUB_WORKSPACE'], 'build-output/yasm'))"
-      - name: Add Yasm to PATH (Windows)
-        if: matrix.os == 'windows-latest'
-        run: echo $GITHUB_WORKSPACE/build-output >> $GITHUB_PATH
+        run: pacman -S yasm
         
       - name: Configure build
-        run: cd build-output && ../configure --disable-examples --disable-tools --disable-docs --enable-vp9-decoder --disable-vp8-decoder --disable-vp8-encoder --disable-vp9-encoder --disable-unit-tests
+        run: cd build-output && ../configure --disable-examples --disable-tools --disable-docs --enable-vp9-decoder --enable-vp8-decoder --disable-vp8-encoder --disable-vp9-encoder --disable-unit-tests
 
       - name: Check yasm availability
         run: cd build-output && ls && yasm --version
