--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,59 +74,14 @@ jobs:
     needs: [build]
   
     steps:
-      - name: Run latest-tag
-        uses: EndBug/latest-tag@latest
-
-      - name: Create release
-        uses: actions/create-release@v1
-        id: create_release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: mv linux/libvpx.a libvpx-linux.a && mv macos/libvpx.a libvpx-macos.a && mv windows/libvpx.a libvpx-windows.a
+    
+      - uses: "marvinpinto/action-automatic-releases@latest"
         with:
-          tag_name: latest
-          release_name: ${{ inputs.releaseName }}
-        
-      - name: Download Linux build
-        uses: actions/download-artifact@v1
-        with:
-          name: linux
-
-      - name: Download macOS build
-        uses: actions/download-artifact@v1
-        with:
-          name: macos
-          
-      - name: Download Windows build
-        uses: actions/download-artifact@v1
-        with:
-          name: windows
-          
-      - name: Upload macOS package
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: macos/libvpx.a
-          asset_name: libvpx-macos.a
-          asset_content_type: application/x-binary
-          
-      - name: Upload Linux package
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: linux/libvpx.a
-          asset_name: libvpx-linux.a
-          asset_content_type: application/x-binary
-          
-      - name: Upload Windows package
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: windows/libvpx.a
-          asset_name: libvpx-windows.a
-          asset_content_type: application/x-binary
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          prerelease: false
+          title: ${{ inputs.releaseName }}
+          files: |
+            libvpx-linux.a
+            libvpx-macos.a
+            libvpx-windows.a
